# flask_interactive_map

./: app.py  config.py  database.py  osm_data.py  pyproject.toml  requirements.txt
static/css/: style.css
static/data/: coverage.geojson  toledo_roads.geojson  toledo_roads_v002.geojson
templates/: base.html  index.html
